Colaboratory를 통해 생성됨

--- a/SinglyLinkedList.ipynb
+++ b/SinglyLinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM76vgsqiu0zA2/mAhu88Fz",
+      "authorship_tag": "ABX9TyOxV3f7eribEDXl0hDQ51Q4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "metadata": {
         "id": "ywNz7d8UJHIW"
       },
@@ -126,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xtpyw0SMNEAo",
-        "outputId": "3321f91f-e133-4a6b-882e-604efd37ea7a"
+        "outputId": "bb17a44c-571e-4c86-bd2b-8c363884c97b"
       },
-      "execution_count": 18,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,6 +230,28 @@
         "\n",
         "      return key\n",
         "\n",
+        "  # O(N)\n",
+        "  def search(self, key: int) -> Node:\n",
+        "    # search the node with key\n",
+        "    target = self.head\n",
+        "    while target != None:\n",
+        "      if target.key == key:\n",
+        "        return target\n",
+        "\n",
+        "      target = target.next\n",
+        "\n",
+        "    # there isn't the node with key\n",
+        "    return None\n",
+        "\n",
+        "\n",
+        "  # this method can make me use for-loop \n",
+        "  def __iter__(self):\n",
+        "    node = self.head\n",
+        "\n",
+        "    while node != None:\n",
+        "      yield node\n",
+        "      node = node.next\n",
+        "\n",
         "  def __len__(self):\n",
         "    return self.size\n",
         "\n",
@@ -261,9 +283,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "168979b8-cd9f-4a18-b134-2141ccaa2d5a"
+        "outputId": "e05d4d1b-1040-4733-9e3c-42a12e793c3d"
       },
-      "execution_count": 19,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,7 +298,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 29
         }
       ]
     },
@@ -302,9 +324,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cWdUnbZHlir-",
-        "outputId": "5a42ec7f-a9ff-4d43-cd54-09d7ec8fc96b"
+        "outputId": "ee2f1116-6eee-4ac8-b3a8-aa2e4dd9db99"
       },
-      "execution_count": 20,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,9 +361,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WqhTLgmMmkS4",
-        "outputId": "2f01de32-ad72-42cb-ab14-60d53e700091"
+        "outputId": "6719f709-7819-454d-cc1d-4ca94d3c64bd"
       },
-      "execution_count": 21,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,9 +386,60 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "sll = SinglyLinkedList()\n",
+        "\n",
+        "for i in range(1, 9):\n",
+        "  sll.push_back(i)\n",
+        "\n",
+        "print(sll)\n",
+        "print('\\n=========\\n')\n",
+        "\n",
+        "for node in sll:\n",
+        "  print(node)\n",
+        "print('\\n=========\\n')\n",
+        "\n",
+        "target = sll.search(key=6)\n",
+        "print(target)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nvR_htQsnY__",
+        "outputId": "830d18ea-acc6-468c-91ea-dc42a85752f2"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1->2->3->4->5->6->7->8->None\n",
+            "\n",
+            "=========\n",
+            "\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "\n",
+            "=========\n",
+            "\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "nvR_htQsnY__"
+        "id": "GDAwbuYytebd"
       },
       "execution_count": null,
       "outputs": []
