Colaboratory를 통해 생성됨

--- a/DoublyLinkedList.ipynb
+++ b/DoublyLinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQf+/+0TRertXnGYfNl9SJ",
+      "authorship_tag": "ABX9TyNope676pOOUjmWl3pFnupx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +98,73 @@
         "    xn.prev = b\n",
         "\n",
         "    return None\n",
+        "\n",
+        "  # O(1), this help me using insert()\n",
+        "  def move_after(self, a, x):\n",
+        "    # it moves a after x\n",
+        "    self.splice(a, a, x)\n",
+        "\n",
+        "  def move_before(self, a, x):\n",
+        "    # it moves a before x\n",
+        "    self.splice(a, a, x.prev)\n",
+        "\n",
+        "  # O(1)\n",
+        "  def insert_after(self, x, key):\n",
+        "    # insert a new node with key after x\n",
+        "    self.move_after(Node(key), x)\n",
+        "\n",
+        "  def insert_before(self, x, key):\n",
+        "    # insert a new node with key before x\n",
+        "    self.move_before(Node(key), x)\n",
+        "  \n",
+        "  # O(1)\n",
+        "  def push_front(self, key):\n",
+        "    # insert a new node with key after self.head\n",
+        "    self.insert_after(self.head, key)\n",
+        "\n",
+        "  # O(1)\n",
+        "  def push_back(self, key):\n",
+        "    # insert a new node with key before self.head\n",
+        "    self.insert_before(self.head, key)\n",
+        "    \n",
+        "  # O(N)\n",
+        "  def search(self, key):\n",
+        "    # it helps me find a node with key\n",
+        "    curr = self.head # dummy node\n",
+        "    \n",
+        "    # circular doubly linked list\n",
+        "    while curr.next != self.head:\n",
+        "      if curr.key == key:\n",
+        "        return curr\n",
+        "\n",
+        "      curr = curr.next\n",
+        "\n",
+        "    return None\n",
+        "\n",
+        "  # O(N)\n",
+        "  def remove(self, key):\n",
+        "    # first of all, finding the node with key, then remove it\n",
+        "    x = self.srearch(key)\n",
+        "\n",
+        "    if x == None or x == self.head:\n",
+        "      return None\n",
+        "\n",
+        "    x.prev.next, x.next.prev = x.next, x.prev\n",
+        "    del x\n",
+        "    \n",
+        "\n",
+        "    \n",
+        "\n",
+        "\n",
+        "\n",
+        "    \n",
+        "\n",
+        "  \n",
+        "\n",
+        "  \n",
+        "\n",
+        "  \n",
+        "\n",
         "\n",
         "\n",
         "\n",
