Colaboratory를 통해 생성됨

--- a/DoublyLinkedList.ipynb
+++ b/DoublyLinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNope676pOOUjmWl3pFnupx",
+      "authorship_tag": "ABX9TyP6C5mScPfymxiE8aYYL3Xq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9d_Dd9P21TQ0"
       },
@@ -151,27 +151,40 @@
         "\n",
         "    x.prev.next, x.next.prev = x.next, x.prev\n",
         "    del x\n",
-        "    \n",
-        "\n",
-        "    \n",
-        "\n",
         "\n",
         "\n",
         "    \n",
+        "  def pop_front(self):\n",
+        "    pass\n",
         "\n",
-        "  \n",
+        "  def pop_back(self):\n",
+        "    pass\n",
         "\n",
-        "  \n",
+        "  def join(self):\n",
+        "    pass\n",
+        "    # it can be used that joining two DLLs each other\n",
         "\n",
-        "  \n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "  def split(self, x):\n",
+        "    pass\n",
+        "    # it can be used that dividing two DLLs\n",
+        "    # first one haves x as tail, the other haves nodes after x\n",
         "\n",
         "\n",
         "  "
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "im going to make the DLL's code perfectly on this weekend\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "J_7bA79HgV8H"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
