Colaboratory를 통해 생성됨

--- a/Queue.ipynb
+++ b/Queue.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5WfsWUSyGOpDhX7mUuOC8",
+      "authorship_tag": "ABX9TyP3GZokXWRljR7DPdEzPJuz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "    self.items.append(key)\n",
         "  \n",
         "  def dequeue(self):\n",
-        "    if len(self) == 0:\n",
+        "    if len(self) == 0 or len(self.items) == 0:\n",
         "      print(\"Q is empty\")\n",
         "      return\n",
         "\n",
